Fix small typos

--- a/final-paper/evaluation.tex
+++ b/final-paper/evaluation.tex
@@ -6,7 +6,7 @@ To evaluate Revelio we analyzed the top 100 and the top 900-1000 Python projects
 
 \subsection{User Study}
 
-To assess the utility of our sublime plugin and to answer \textbf{R5}, we interviewed 7 developers about their experience in writing secure code in Python. To better understand their experience with the domain, we asked some preliminary questions that probed the participants about their expertise in analyzing code for security flaws. The interview also sought to examine the workflow developers use to update their knowledge about the fast-moving space of security, and the information sources they consult to do the same.
+To assess the utility of our Sublime Text plugin and to answer \textbf{R5}, we interviewed 7 developers about their experience in writing secure code in Python. To better understand their experience with the domain, we asked some preliminary questions that probed the participants about their expertise in analyzing code for security flaws. The interview also sought to examine the workflow developers use to update their knowledge about the fast-moving space of security, and the information sources they consult to do the same.
 
 After the initial round of questioning to establish basic facts about the participants, we asked the developers to read a code snippet and try to find vulnerabilities. We had constructed a 50 line code snippet\footnote{\url{https://github.com/scholtzan/cpsc-507/blob/master/userstudy/small-example.py}} for this task and had included 5 unsafe function calls. The participants were provided a simple text editor for this task, and no tooltips were available to help them reason about the validity of their reasoning. The participants were not allowed to consult online resources either. 
 
@@ -166,7 +166,7 @@ VK* & 28 & Technology Associate, Goldman Sachs & 4 & 2 & 2 & 4 & 5 & 4 \\
 
 The number of vulnerabilities participants identified is mentioned in Table~\ref{tab:user-study}. Depending on their experience with the language, the participants spent varying amounts of time analyzing the code. The most commonly identified vulnerability was the use of md5 hashing to save passwords (all participants other than LC were able to identify this), and none of the participants managed to identify the \texttt{yaml.load} vulnerability. 
 
-All participants liked the Sublime plugin as it helped to confirm or dispel doubts about the code they were inspecting and in general were favorable of the idea to use a static analysis tool to highlight potential security vulnerabilities in code. All participants agreed strongly to the utility of having such a tool available to them either as an IDE plugin or as part of a pre-commit lint checker. 
+All participants liked the Sublime Text plugin as it helped to confirm or dispel doubts about the code they were inspecting and in general were favorable of the idea to use a static analysis tool to highlight potential security vulnerabilities in code. All participants agreed strongly to the utility of having such a tool available to them either as an IDE plugin or as part of a pre-commit lint checker. 
 
 When asked about potential improvements to the tool, most participants wanted some form of integration with DevOps tools like pre-commit lint checking [ND,FR,LP,AJ,VK]. Another common ask was to have the ability to dismiss warnings and prevent certain kinds of warnings from being flagged [HG,LC,AJ]. Some developers had concerns about the effort involved in updating the vulnerability list [FR,AJ], and indicated the scenario for having a self-updating vulnerability database.
 
