--- a/final-paper/revelio.tex
+++ b/final-paper/revelio.tex
@@ -76,9 +76,9 @@ Checking whether dependencies are outdated is done by extracting imports from th
 
 \subsubsection{Testing}\label{sec:testing}
 
-Tests are optionally executed after insecure functions have been replaced with safe alternatives or outdated dependencies have been updated. There are several testing frameworks that exist for the python ecosystem, however, there are clear favorites that exist among the developer community. From a preliminary search on GitHub, we determined that \emph{pytest}\footnote{\url{https://docs.pytest.org/en/latest/index.html}}, \emph{nose}\footnote{\url{http://nose.readthedocs.io/en/latest/}}, and \emph{unittest}\footnote{\url{https://docs.python.org/2/library/unittest.html}} are the most commonly used. Each of these testing frameworks has their own unique ways to organize, discover, and run tests~\cite{nosetests}~\cite{pytests}. While this divergence is something any automated testing environment has to reckon with, it is also understood well enough that tools have evolved to help deal with this challenge.
+Tests are optionally executed after insecure functions have been replaced with safe alternatives or outdated dependencies have been updated. There are several testing frameworks that exist for the Python ecosystem, however, there are clear favorites that exist among the developer community. From a preliminary search on GitHub, we determined that \emph{pytest}\footnote{\url{https://docs.pytest.org/en/latest/index.html}}, \emph{nose}\footnote{\url{http://nose.readthedocs.io/en/latest/}}, and \emph{unittest}\footnote{\url{https://docs.python.org/2/library/unittest.html}} are the most commonly used. Each of these testing frameworks has their own unique ways to organize, discover, and run tests~\cite{nosetests}~\cite{pytests}. While this divergence is something any automated testing environment has to reckon with, it is also understood well enough that tools have evolved to help deal with this challenge.
 
-\emph{Tox}\footnote{\url{https://tox.readthedocs.io/en/latest/}} is a tool that was created with the aim to standardize the testing effort for python projects. Tox has been designed in a way that makes it continuous integration ready, while still being able to support a wide variety of testing practices. It offers great flexibility to developers in specifying how they want their projects to be tested. Tox allows the user to create a config file for the project that allows the developer to specify the package dependencies that must be fulfilled to test the project, the various versions of the python interpreter that the project needs to be tested against, and allows the user to differentially specify tests that must be run against each target. 
+\emph{Tox}\footnote{\url{https://tox.readthedocs.io/en/latest/}} is a tool that was created with the aim to standardize the testing effort for Python projects. Tox has been designed in a way that makes it continuous integration ready, while still being able to support a wide variety of testing practices. It offers great flexibility to developers in specifying how they want their projects to be tested. Tox allows the user to create a config file for the project that allows the developer to specify the package dependencies that must be fulfilled to test the project, the various versions of the Python interpreter that the project needs to be tested against, and allows the user to differentially specify tests that must be run against each target. 
 
 Given the popularity of the tox project, it became a natural choice for Revelio. Revelio has a simple strategy for running tests: for a project that has a \texttt{tox.ini} file in the repository, use it as is; for a project that doesn't have one, create one on a best-effort basis by filling in details in a template config file. A sample \texttt{tox.ini} file is as described in Figure: 
 
@@ -108,9 +108,9 @@ deps =
 
 There are several details that need to be considered to fill in the template file:
 \begin{enumerate}
-    \item \textbf{Python Interpreters:} A project might support multiple python environments. A project usually specifies the python environments that it is designed for in its \texttt{setup.py} file that is used by distutils to install the project. If this information is not found in the setup.py file, it defaults to using \texttt{['py35','py27','py26','py32','py33','py36']}
-    \item \textbf{Requirements and Constraints File:}  A project may specify several requirements and constraint files that are usually scattered throughout the project hierarchy. The developer might have several reasons for creating multiple requirements files, and they might be used for executing different test suites. The uncertainty in knowing how to use these files poses an interesting challenge while creating the \texttt{tox.ini} file. Revelio merges all requirements and constraint files it discovers in the project hierarchy, and for any inconsistencies in the version numbers for packages, it selects the lower version.
-    \item \textbf{Python Path for the Project:} This is the root location where the main source code is located in the project hierarchy. It is used because often tests are defined inside some subdirectory and expect the python path to be set accordingly. We currently do not handle the scenario where tests are not defined in the project base directory.
+    \item \textbf{Python Interpreters:} A project might support multiple Python environments. A project usually specifies the Python environments that it is designed for in its \texttt{setup.py} file that is used by distutils to install the project. If this information is not found in the setup.py file, it defaults to using \texttt{['py35','py27','py26','py32','py33','py36']}
+    \item \textbf{Requirements and Constraints Files:}  A project may specify several requirements and constraint files that are usually scattered throughout the project hierarchy. The developer might have several reasons for creating multiple requirements files, and they might be used for executing different test suites. The uncertainty in knowing how to use these files poses an interesting challenge while creating the \texttt{tox.ini} file. Revelio merges all requirements and constraint files it discovers in the project hierarchy, and for any inconsistencies in the version numbers for packages, it selects the lower version.
+    \item \textbf{Python Path for the Project:} This is the root location where the main source code is located in the project hierarchy. It is used because often tests are defined inside some subdirectory and expect the Python path to be set accordingly. We currently do not handle the scenario where tests are not defined in the project base directory.
     \item \textbf{Test Runners:} A test runner is a framework for executing tests for a project. The test runners that Revelio has been tuned for are pytest, nose and unittest. Revelio utilizes the common underlying mechanism that all test runners utilize pytests and nose work by finding tests that subclass unittest. This also presents an interesting property that is utilized by Revelio: pytest and nose can be used interchangeably to run the tests. Given this equivalence, Revelio tries to use pytest to run the tests. If the tests cannot be run, the errors are logged and later shown to the user.  
 \end{enumerate}
 
